--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dependencies": {
         "@pulumi/aws": "^5.0.0",
         "@pulumi/awsx": "^0.40.0",
-        "@pulumi/pulumi": "^3.0.0"
+        "@pulumi/command": "^0.2.0",
+        "@pulumi/pulumi": "^3.0.0",
+        "@pulumi/tls": "^4.5.0"
     }
 }
